fixed text alignment below buttons

--- a/style.css
+++ b/style.css
@@ -129,8 +129,8 @@ p {
 }
 
 .main-2 button {
-  width: 200px;
-  height: 200px;
+  width: 300px;
+  height: 300px;
   margin: 20px 10px 0px 10px;
   border-radius: 15px;
   border: 5px solid #3882f6;
@@ -140,7 +140,7 @@ p {
   display: flex;
   margin: 20px 20px;
   justify-content: center;
-  /* flex-wrap: wrap; */
+  flex-wrap: wrap;
 }
 
 .button1 {
@@ -168,9 +168,15 @@ p {
 }
 
 small {
-  display: block;
+  /* display: block; */
   margin-left: 10px;
   margin-top: 5px;
   text-align: center;
   max-width: 200px;
+}
+
+.button-container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
